infra/k8s/otel-lgtm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-lgtm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-lgtm
  template:
    metadata:
      labels:
        app: otel-lgtm
    spec:
      containers:
        - name: otel-lgtm
          image: grafana/otel-lgtm
          ports:
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  selector:
    app: otel-lgtm
  ports:
    - name: grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: http
      protocol: TCP
      port: 4318
      targetPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: otel-lgtm
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: 3000
